# copters

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
benches/: bench.rs
benches/lp/: mod.rs  netlib.rs
data/: netlib.csv
docs/algs/: intro.typ  ipm.typ  main.typ  mpc.typ  preamble.typ  refs.bib
examples/: Cargo.toml
loaders/: Cargo.toml  build.rs
loaders/src/: emps.c  lib.rs  mps.rs  mtx.rs  netlib.rs  sif.rs
macros/: Cargo.toml  lib.rs
macros/options/: Cargo.toml  lib.rs
macros/symdiff/: Cargo.toml  lib.rs
macros/symdiff/src/: expr.rs  lib.rs
macros/symdiff/tests/: integration.rs
macros/testing/: Cargo.toml  lib.rs
scripts/: build-docs.sh
src/: callback.rs  initializer.rs  ipm.rs  lib.rs  state.rs  terminators.rs
src/data_loaders/: mod.rs  mps.rs  mtx.rs  netlib.rs  sif.rs
src/interface/: mod.rs  netlib.rs  sif.rs
src/linalg/: cholesky.rs  lu.rs  mod.rs  pardiso.rs  solver.rs  vector_ops.rs
src/lp/: mod.rs
src/lp/deprecated/ipm/: augmented_system.rs
src/lp/deprecated/mpc/: augmented_system.rs  line_search.rs  mod.rs  mu_update.rs
src/lp/mpc/: augmented_system.rs  line_search.rs  mod.rs  mu_update.rs
src/model/: expr.rs  mod.rs
src/nlp/: mod.rs
src/nlp/deprecated/ipm/: line_search.rs  mod.rs  mu_oracle.rs  mu_update.rs
src/nlp/gd/: mod.rs  stepsize.rs
src/nlp/ipm/: augmented_system.rs  line_search.rs  mod.rs  mu_oracle.rs  mu_update.rs
src/qp/: mod.rs
src/qp/deprecated/: mod.rs
src/qp/deprecated/mpc/: mod.rs  mu_update.rs
src/qp/mpc/: augmented_system.rs  line_search.rs  mod.rs  mu_update.rs
src/qp/pc/: augmented_system.rs  line_search.rs  mod.rs  mu_update.rs
src/stochastic/sgd/: mod.rs
src/tests/: maros_mezaros.rs  mod.rs  netlib.rs
src/utils/: io.rs
