[package]
name = "copters"
version = "0.1.0"
edition = "2024"
authors = ["Avinash Madavan <avinash.madavan@gmail.com>"]
description = "A Rust library for numerical optimization."
repository = "https://github.com/amadavan/copters"
keywords = ["optimization", "linear-programming", "solver", "rust"]
categories = ["science", "algorithms", "mathematics"]
license-file = "LICENSE"
readme = "README.md"

[dependencies]
macros = { path = "macros" }
ctrlc = "3.5.1"
dyn-clone = "1.0.20"
faer = "0.23.2"
problemo = "0.0.11"
derive_more = { version = "2.1.1", features = ["display", "error"] }

[dev-dependencies]
loaders = { path = "loaders" }
divan = "0.1.21"

# For testing ctrl+c interrupt events
[target.'cfg(unix)'.dev-dependencies]
nix = { version = "0.30", default-features = false, features = ["signal"]}

[target.'cfg(windows)'.dev-dependencies]
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem", "Win32_Foundation", "Win32_System_IO", "Win32_System_Console"] }

[[bench]]
name = "bench"
harness = false
