[package]
name = "copters"
version = "0.1.0"
edition = "2024"
authors = ["Avinash Madavan <avinash.madavan@gmail.com>"]
description = "A Rust library for numerical optimization."
repository = "https://github.com/amadavan/copters"
keywords = ["optimization", "linear-programming", "solver", "rust"]
categories = ["science", "algorithms", "mathematics"]
license-file = "LICENSE"
readme = "README.md"

[dependencies]
macros = { path = "macros" }
ctrlc = "3.5.1"
dyn-clone = "1.0.20"
faer = "0.24.0"
problemo = "0.0.11"
derive_more = { version = "2.1.1", features = ["display", "error"] }
sif-rs = "0.9.2"
enum_dispatch = "0.3.13"
pardiso-wrapper = { version = "0.1.2", optional = true }

[dev-dependencies]
divan = "0.1.21"
rstest = "0.26.1"
rstest_reuse = "0.7.0"
loaders = { path = "loaders" }

[features]
default = []
pardiso = ["dep:pardiso-wrapper"]
panua = ["pardiso", "pardiso-wrapper/panua"]
mkl = ["pardiso", "pardiso-wrapper/mkl"]

# For testing ctrl+c interrupt events
[target.'cfg(unix)'.dev-dependencies]
nix = { version = "0.30.0", default-features = false, features = ["signal"]}

[target.'cfg(windows)'.dev-dependencies]
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem", "Win32_Foundation", "Win32_System_IO", "Win32_System_Console"] }

[[bench]]
name = "bench"
harness = false
