[package]
name = "copters"
version = "0.1.0"
edition = "2024"
authors = ["Avinash Madavan <avinash.madavan@gmail.com>"]
description = "A Rust library for numerical optimization."
repository = "https://github.com/amadavan/copters"
keywords = ["optimization", "linear-programming", "solver", "rust"]
categories = ["science", "algorithms", "mathematics"]
license-file = "LICENSE"
readme = "README.md"

[build-dependencies]
cc = "1.2.58"

[dependencies]
macros = { path = "macros" }
ctrlc = "3.5.2"
dyn-clone = "1.0.20"
faer = "0.24.0"
problemo = "0.0.12"
derive_more = { version = "2.1.1", features = ["display", "error"] }
enum_dispatch = "0.3.13"
serde = { version = "1.0.228", features = ["derive"] }

pardiso-wrapper = { version = "0.1.2", optional = true }

csv = { version = "1.4.0", optional = true }
flate2 = { version = "1.1.8", optional = true }
indicatif = { version = "0.18.4", optional = true }
libc = { version = "0.2.183", optional = true }
matrix-market-rs = { version = "0.1.3", optional = true }
reqwest = { version = "0.13.1", features = ["blocking"], optional = true }
sif-rs = { version = "0.9.3", optional = true }
tar = { version = "0.4.45", optional = true }
tempfile = { version = "3.26.0", optional = true }


[dev-dependencies]
divan = "0.1.21"
rstest = "0.26.1"
rstest_reuse = "0.7.0"

[features]
default = ["mtx"]

pardiso = ["dep:pardiso-wrapper"]
panua = ["pardiso", "pardiso-wrapper/panua"]
mkl = ["pardiso", "pardiso-wrapper/mkl"]

mtx = [
    "dep:csv",
    "dep:flate2",
    "dep:matrix-market-rs",
    "dep:tempfile",
    "dep:tar",
    "dep:reqwest",
]
sif = [
    "dep:csv",
    "dep:flate2",
    "dep:indicatif",
    "dep:libc",
    "dep:reqwest",
    "dep:sif-rs",
    "dep:tar",
    "dep:tempfile",
]

# For testing ctrl+c interrupt events
[target.'cfg(unix)'.dev-dependencies]
nix = { version = "0.30.0", default-features = false, features = ["signal"] }

[target.'cfg(windows)'.dev-dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_System_Console",
] }

[[bench]]
name = "bench"
harness = false
