[package]
name = "loaders"
version = "0.1.0"
edition = "2024"

[build-dependencies]
cc = "1.2.52"

[dependencies.macros]
path = "../macros"

[dependencies]
faer = "0.23.1"
flate2 = "1.1.8"
libc = "0.2.180"
matrix-market-rs = "0.1.3"
mps = "1.0.0"
problemo = "0.0.11"
reqwest = { version = "0.13.1", features = ["blocking"] }
tar = "0.4.44"
tempfile = "3.24.0"
