[package]
name = "loaders"
version = "0.1.0"
edition = "2024"

[build-dependencies]
cc = "1.2.56"

[dev-dependencies]
rstest = "0.26.1"

[dependencies]
csv = "1.4.0"
faer = "0.24.0"
flate2 = "1.1.8"
indicatif = "0.18.4"
libc = "0.2.182"
matrix-market-rs = "0.1.3"
problemo = "0.0.11"
reqwest = { version = "0.13.1", features = ["blocking"] }
rstest_reuse = "0.7.0"
serde = { version = "1.0.228", features = ["derive"] }
sif-rs = "0.9.0"
tar = "0.4.44"
tempfile = "3.24.0"
