[package]
name = "options"
version = "0.1.0"
edition = "2024"

[lib]
name = "options"
path = "lib.rs"
proc-macro = true

[dependencies]
convert_case = "0.9.0"
deluxe = "0.5.0"
dyn-clone = "1.0.20"
lazy_static = "1.5.0"
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = {version = "2.0.104", features = ["full"]}
